<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/Theme.TextView.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dialog_addcategory_title" />

    <EditText
        android:id="@+id/dialog_addcategory_et"
        style="@style/Theme.TextView.EditText.Flat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/dialog_addcategory_ethint"
        android:inputType="text"
        android:maxLines="1"
        android:minWidth="100dp"
        android:minHeight="0dp"
        android:padding="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_addcategory_button"
        style="@style/Theme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="createYourBudget"
        android:text="@string/dialog_addcategory_button" />
</LinearLayout>